WEB-5566: Space out sections on webcat toolbar to prevent labels from bleeding with each other.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -568,6 +568,10 @@ button {
   margin-right: 3px;
 }
 
+#webcat-index-toolbar div {
+  margin-right: 12px;
+}
+
 .toolbar div:last-child {
   //width: 100%;
   margin-right: 0 !important;
